--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "license": "MIT",
   "dependencies": {
     "auth0-lock": "^9.0.0",
+    "formsy-material-ui": "0.4.3",
+    "formsy-react": "0.18.0",
+    "material-ui": "0.15.0",
     "object-assign": "4.1.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
