--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "material-ui": "0.15.0",
     "object-assign": "4.1.0",
     "react": "15.0.2",
+    "react-color": "2.1.0",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
+    "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
     "whatwg-fetch": "1.0.0"
